crates/next-custom-transforms/tests/errors/next-font-loaders/not-ident/output.js
const { a  } = Inter({
    variant: '400'
});
const [b] = Inter({
    variant: '400'
});
const { e  } = {};
